@@ -227,7 +227,7 @@ int parse_command_line(int argc, char * const argv[])
 		{ "from-dump", required_argument, NULL, 'F' },
 		{ "no-sysfs", no_argument, NULL, 'S' },
 		{ "version", no_argument, NULL, 'V' },
-		{ 0, 0, 0, 0 }
+		{ NULL, 0, NULL, 0 }
 	};
 
 	while ((option = getopt_long(argc, argv, optstring, longopts, NULL)) != -1)
