@@ -99,7 +99,7 @@ int parse_command_line(int argc, char * const argv[])
 		{ "string", required_argument, NULL, 's' },
 		{ "dump", no_argument, NULL, 'u' },
 		{ "version", no_argument, NULL, 'V' },
-		{ 0, 0, 0, 0 }
+		{ NULL, 0, NULL, 0 }
 	};
 
 	while ((option = getopt_long(argc, argv, optstring, longopts, NULL)) != -1)
