@@ -1,6 +1,7 @@
 2015-04-28  Jean Delvare  <jdelvare@suse.de>
 
 	* dmidecode.h, dmiopt.h: Fix sparse errors.
+	* biosdecode.c, dmiopt.c, ownership.c, vpdopt.c: Fix sparse warnings.
 
 2015-04-27  Jean Delvare  <jdelvare@suse.de>
 
